--- a/welcome/index.adoc
+++ b/welcome/index.adoc
@@ -199,7 +199,7 @@ xref:../applications/working_with_helm_charts/understanding-helm.adoc#understand
 - **xref:../operators/operator_sdk/osdk-about.adoc#osdk-about[Develop Operators]**: Operators are the preferred method for creating on-cluster applications for {product-title} {product-version}. Learn the workflow for building, testing, and deploying Operators. You can then create your own Operators based on xref:../operators/operator_sdk/ansible/osdk-ansible-support.adoc#osdk-ansible-support[Ansible] or
 xref:../operators/operator_sdk/helm/osdk-helm-support.adoc#osdk-helm-support[Helm], or configure xref:../operators/operator_sdk/osdk-monitoring-prometheus.adoc#osdk-monitoring-prometheus[built-in Prometheus monitoring] by using the Operator SDK.
 
-- **Reference the xref:../rest_api/index.adoc#api-index[REST API index]**: Learn about {product-title} application programming interface endpoints.
+- **Reference the xref:../rest_api/overview/index.adoc#api-index[REST API index]**: Learn about {product-title} application programming interface endpoints.
 
 // Need to provide a link closer to 4.15 GA
 - **Software Supply Chain Security enhancements**: The PipelineRun *details* page in the *Developer* or *Administrator* perspective of the web console provides a visual representation of identified vulnerabilities, which are categorized by severity. Additionally, these enhancements provide an option to download or view Software Bill of Materials (SBOMs) for enhanced transparency and control within your supply chain. Learn about link:https://docs.openshift.com/pipelines/1.13/secure/setting-up-openshift-pipelines-to-view-software-supply-chain-security-elements.html[setting up OpenShift Pipelines in the web console to view Software Supply Chain Security elements].
