--- a/security/container_security/security-container-content.adoc
+++ b/security/container_security/security-container-content.adoc
@@ -27,4 +27,4 @@ include::modules/security-container-content-external-scanning.adoc[leveloffset=+
 [role="_additional-resources"]
 .Additional resources
 * xref:../../openshift_images/index.adoc#overview-of-images[Image stream objects]
-// * xref::../../rest_api/index.adoc#rest-api[{product-title} {product-version} REST APIs]
+// * xref::../../rest_api/overview/index.adoc#rest-api[{product-title} {product-version} REST APIs]
