--- a/modules/otel-troubleshoot-instrumentation.adoc
+++ b/modules/otel-troubleshoot-instrumentation.adoc
@@ -10,54 +10,24 @@ You can troubleshoot instrumentation issues as follows.
 
 .Procedure
 
+== Ensure the Instrumentation was injected properly in your workload
+
 . Check the instrumentation object is created:
++
 [source,console]
 ----
 oc get instrumentation -n <your-project>
 ----
 
-. Confirm that the application pods you want to instrument are labeled correctly and the appropriate auto-instrumentation settings have been applied. For example, if you are instrumenting a Python application, you can check that the pods have the `instrumentation.opentelemetry.io/inject-python='true'` label:
-
-[source,console]
-----
-oc get pods -n <your-project> -o jsonpath='{range .items[?(@.metadata.annotations["instrumentation.opentelemetry.io/inject-python"]=="true")]}{.metadata.name}{"\n"}{end}'
-----
-
-You should double-check the annotation applied to the instrumentation object is the correct one for the language you are instrumenting. If there are multiple instrumentations in the same namespace, you should set its name in the annotation. Also, if the Instrumentation object is in a different namespace, you need to specify it in the annotation. You can find the accepted values in the link:otel-instrumentation.html["OpenTelemetry instrumentation configuration options"] section.
-
-When defining a Deployment, remember that annotations can be added in either {{spec.metadata.annotations}} or {{spec.template.metadata.annotations}}. Ensure that the auto-instrumentation annotation is added to {{spec.template.metadata.annotations}}.
-
-. Verify the endpoint that the instrumentation is transmitting data to:
-
-[source,console]
-----
-oc get instrumentation <instrumentation-name> -n <your-project> -o jsonpath='{.spec.endpoint}'
-----
-
-By default, the endpoint is `http://localhost:4317`. This will work if you deployed the OpenTelemetry Collector as a sidecar container in your application pod. If you are using a different endpoint, you can update it by editing the instrumentation object and redeploying your application.
-
-. Inspect your application logs for error messages that might suggest that the instrumentation is malfunctioning:
-
-[source,console]
-----
-oc logs <application-pod> -n <your-project>
-----
-
-Some common errors include:
-* Unable to automatically infer a package for instrumentation
-* Unsupported application framework or version
-
-You should be able to reproduce them without the usage of the operator and just using the OpenTelemetry SDK directly.
-
 . Verify that the resources were deployed in the correct order
-
++
 Deploy the Instrumentation resource before the application to ensure auto-instrumentation works correctly.
 
 When the pod starts, the operator checks for the annotation to know if it needs to inject an instrumentation. It will check for an Instrumentation and inject auto-instrumentation into the pod based on the settings specified in the annotation. Generally, this process adds an init-container to the application’s pod, which is responsible for injecting the auto-instrumentation into the app container and some environment variables.
 
 If the Instrumentation resource is not available when the application is deployed, the operator will not inject the auto-instrumentation. When you want to update the instrumentation settings, you need to delete the instrumentation object and redeploy the application.
 
-To verify that the {{opentelemetry-auto-instrumentation}} init-container has successfully started, execute the following command:
+To verify that the `opentelemetry-auto-instrumentation`` init-container has successfully started, execute the following command:
 
 [source,console]
 ----
@@ -75,10 +45,47 @@ You should see something like this:
 If those messages are missing, then it means that was an issue while injecting the auto-instrumentation.
 
 . Inspect for the operator logs for instrumentation errors:
-
++
 [source,console]
 ----
 oc logs -l app.kubernetes.io/name=opentelemetry-operator --container manager -n openshift-opentelemetry-operator --follow
 ----
 
-. Enable the Debug exporter described in the xref::debug-exporter-to-stdout_{context}[Debug exporter section].
+. Confirm that the application pods you want to instrument are labeled correctly and the appropriate auto-instrumentation settings have been applied. For example, if you are instrumenting a Python application, you can check that the pods have the `instrumentation.opentelemetry.io/inject-python='true'` annotation:
++
+[source,console]
+----
+oc get pods -n <your-project> -o jsonpath='{range .items[?(@.metadata.annotations["instrumentation.opentelemetry.io/inject-python"]=="true")]}{.metadata.name}{"\n"}{end}'
+----
+
+You should double-check the annotation applied to the instrumentation object is the correct one for the language you are instrumenting. If there are multiple instrumentations in the same namespace, you should set its name in the annotation. Also, if the Instrumentation object is in a different namespace, you need to specify it in the annotation. You can find the accepted values in the link:otel-instrumentation.html["OpenTelemetry instrumentation configuration options"] section.
+
+When defining a Deployment, remember that annotations can be added in either {{spec.metadata.annotations}} or {{spec.template.metadata.annotations}}. Ensure that the auto-instrumentation annotation is added to {{spec.template.metadata.annotations}}.
+
+
+== Check the instrumentation libraries are generating telemetry data
+. Verify the endpoint that the instrumentation is transmitting data to:
++
+[source,console]
+----
+oc get instrumentation <instrumentation-name> -n <your-project> -o jsonpath='{.spec.endpoint}'
+----
++
+By default, the endpoint is `http://localhost:4317`. This will work if you deployed the OpenTelemetry Collector as a sidecar container in your application pod. If you are using a different endpoint, you can update it by editing the instrumentation object and redeploying your application.
+
+. Inspect your application logs for error messages that might suggest that the instrumentation is malfunctioning:
++
+[source,console]
+----
+oc logs <application-pod> -n <your-project>
+----
++
+Some common errors include:
+* Unable to automatically infer a package for instrumentation
+* Unsupported application framework or version
++
+You should be able to reproduce them without the usage of the operator and just using the OpenTelemetry SDK directly.
+
+. Ensure the telemetry data is reaching your OpenTelemetry Collector
++
+Enabling the debug exporter described in the <<debug-exporter-to-stdout_{context},Debug exporter>> section will allow you to check if the telemetry data is reaching your OpenTelemetry Collector instance.
