OLS-913: Document the OLSConfig CRD configuration options

--- a/configure/ols-configuring-openshift-lightspeed.adoc
+++ b/configure/ols-configuring-openshift-lightspeed.adoc
@@ -6,7 +6,11 @@ include::_attributes/common-attributes.adoc[]
 
 toc::[]
 
-After the {ols-long} Operator is installed, configuring and deploying {ols-long} consists of three tasks. First, you create a credential secret using the credentials for your Large Language Model (LLM) provider. Next, you create the `OLSConfig` custom resource (CR) that the Operator uses to deploy the service. Finally, you verify that the {ols-short} service is operating.
+After the {ols-long} Operator is installed, configuring and deploying consists of three tasks:
+
+* Create a credential secret using the credentials for your Large Language Model (LLM) provider. 
+* Create the `OLSConfig` Custom Resource (CR) file that the Operator uses to deploy the service. 
+* Verify that the {ols-short} service is operating.
 
 [NOTE]
 ====
@@ -14,9 +18,11 @@ The instructions assume that you are installing {ols-long} using the `kubeadmin`
 ====
 
 include::modules/ols-creating-the-credentials-secret-using-web-console.adoc[leveloffset=+1]
-include::modules/ols-creating-lightspeed-custom-resource-file-using-web-console.adoc[leveloffset=+1]
 include::modules/ols-creating-the-credentials-secret-using-cli.adoc[leveloffset=+1]
-include::modules/ols-creating-lightspeed-custom-resource-file-using-cli.adoc[leveloffset=+1]
+include::modules/ols-about-lightspeed-custom-resource-definition.adoc[leveloffset=+1]
+include::modules/ols-custom-resource-definition-file-parameters.adoc[leveloffset=+2]
+include::modules/ols-creating-lightspeed-custom-resource-file-using-web-console.adoc[leveloffset=+2]
+include::modules/ols-creating-lightspeed-custom-resource-file-using-cli.adoc[leveloffset=+2]
 include::modules/ols-verifying-openshift-lightspeed-deployment.adoc[leveloffset=+1]
 include::modules/ols-about-lightspeed-and-role-based-access-control.adoc[leveloffset=+1]
 include::modules/ols-granting-access-to-individual-users.adoc[leveloffset=+2]
