--- a/release_notes/ocp-4-17-release-notes.adoc
+++ b/release_notes/ocp-4-17-release-notes.adoc
@@ -2158,6 +2158,8 @@ As a temporary workaround, the image registry should not be configured as privat
 
 * When installing a cluster on {azure-short}, the installation fails if a customer-managed encryption key is specified. (link:https://issues.redhat.com/browse/OCPBUGS-42349[*OCPBUGS-42349*])
 
+* When an error occurs during mirroring Operators and additional images, the log message "Generating Catalog Source" might still appear, even if no files are generated. (link:https://issues.redhat.com/browse/OCPBUGS-42503[*OCPBUGS-42503*]) 
+
 [id="ocp-telco-ran-4-17-known-issues_{context}"]
 
 [id="ocp-telco-core-4-17-known-issues_{context}"]
