moving stuff around

--- a/machine_configuration/machine-config-about.adoc
+++ b/machine_configuration/machine-config-about.adoc
@@ -1,72 +1,22 @@
 :_mod-docs-content-type: ASSEMBLY
 :context: machine-configs-custom
 [id="machine-config-about"]
-= About using machine configs to configure nodes
+= About using machine config pools to configure nodes
 include::_attributes/common-attributes.adoc[]
 
 
 toc::[]
 
-
-
-
-
-[id="machine-config-change_{context}"]
-== What can you change with machine configs?
-
-The kinds of components that you can change by using a machine config can change include the following:
-
-* **config**: Create Ignition config objects (see the link:https://coreos.github.io/ignition/configuration-v3_2/[Ignition configuration specification]) to do things like modify files, systemd services, and other features on {product-title} machines, including:
-- **Configuration files**: Create or overwrite files in the `/var` or `/etc` directory.
-- **systemd units**: Create and set the status of a systemd service or add to an existing systemd service by dropping in additional settings.
-- **users and groups**: Change SSH keys in the passwd section postinstallation.
-+
-[IMPORTANT]
-====
-* Changing SSH keys by using a machine config is supported only for the `core` user.
-* Adding new users by using a machine config is not supported.
-====
-* **kernelArguments**: Add arguments to the kernel command line when {product-title} nodes boot.
-* **kernelType**: Optionally identify a non-standard kernel to use instead of the standard kernel. Use `realtime` to use the RT kernel (for RAN). This is only supported on select platforms. Use the `64k-pages` parameter to enable the 64k page size kernel. This setting is exclusive to machines with 64-bit ARM architectures.
-ifndef::openshift-origin[]
-* **fips**: Enable link:https://access.redhat.com/documentation/en-us/red_hat_enterprise_linux/8/html-single/security_hardening/index#using-the-system-wide-cryptographic-policies_security-hardening[FIPS] mode. FIPS should be set at installation-time setting and not a postinstallation procedure.
-+
---
-include::snippets/fips-snippet.adoc[]
---
-
-endif::openshift-origin[]
-* **extensions**: Extend {op-system} features by adding selected pre-packaged software. For this feature, available extensions include link:https://access.redhat.com/documentation/en-us/red_hat_enterprise_linux/8/html-single/security_hardening/index#protecting-systems-against-intrusive-usb-devices_security-hardening[usbguard] and kernel modules.
-* **Custom resources (for `ContainerRuntime` and `Kubelet`)**: Outside of machine configs, MCO manages two special custom resources for modifying CRI-O container runtime settings (`ContainerRuntime` CR) and the Kubelet service (`Kubelet` CR).
-
-[id="machine-config-pool-custom_{context}"]
-== About using custom machine config pools to configure nodes
-
 By default, there are two machine config pools (MCP) created by the cluster when it is installed: `master` and `worker`.  Each MCP manages a set of nodes and applies changes made through a machine config to the appropriate nodes. 
 
-However, you can apply changes to specific sets of worker nodes by using _custom machine config pools_. A custom machine config pool manages its own sets of nodes, which are indicated with a node label. One example of this is a set of infrastructure nodes that host infrastructure components, such as the router or the image registry.   
+In addition, you can apply changes to specific sets of worker nodes by using _custom machine config pools_. 
 
-Custom machine config pools are based on the worker machine config pool. As such, custom pools inherit their initial configuration from the `worker` pool and any change to the `worker` pool is applied to the custom pool. Changes to the custom pool are not inherited by the `worker` pool.
+For infomration on configuring nodes by using machine config objects, see xref:../machine_configuration/machine-configs-configure.adoc#machine-configs-configure[Using machine config objects to configure nodes]
 
-[NOTE]
-====
-You cannot use a master machine config pool to create a custom pool.
-====
-
-Note the following characteristics about nodes and machine config pools:
-
-* A node can only be included in one machine config pool. 
-* A node must be included in a machine config pool for the node to function properly.
-* If a node has multiple labels that correspond to different pools, such as `worker,infra`, the node is managed by the custom pool, not the `worker` pool. Custom pools take priority on selecting nodes to manage based on node labels.
-* If a node has the `worker,infra` label, but you do not have an `infra` machine config pool, the node is considered a worker node.
-* If a node has only a custom label that does not have a corresponding custom pool, the node is not recognized by the MCO and is unmanaged by the cluster.
-
-[NOTE]
-====
-If a custom node reboots, the node reboots into the `worker` machine config pool. You need to reapply the custom label to that node to place the node back in the custom pool. 
-====
-
-include::modules/machine-config-pools-custom-configure.adoc[leveloffset=+2]
-include::modules/machine-config-pools-custom-modify.adoc[leveloffset=+2]
-include::modules/machine-config-pools-custom-removing.adoc[leveloffset=+2]
+include::modules/machine-config-pool-custom.adoc[leveloffset=+1]
+include::modules/checking-mco-status.adoc[leveloffset=+1]
+include::modules/checking-mco-node-status.adoc[leveloffset=+1]
+include::modules/machine-config-pools-custom-configure.adoc[leveloffset=+1]
+include::modules/machine-config-pools-custom-modify.adoc[leveloffset=+1]
+include::modules/machine-config-pools-custom-removing.adoc[leveloffset=+1]
 
