--- a/modules/machine-config-pool-custom.adoc
+++ b/modules/machine-config-pool-custom.adoc
@@ -1,16 +1,12 @@
-:_mod-docs-content-type: ASSEMBLY
-:context: machine-configs-custom
-[id="machine-config-pool-custom"]
+// Module included in the following assemblies:
+//
+// * machine_configuration/machine-config-about.adoc
+
+:_content-type: PROCEDURE
+[id="machine-config-pool-custom_{context}"]
 = About using custom machine config pools to configure nodes
-include::_attributes/common-attributes.adoc[]
 
-toc::[]
-
-
-
-By default, there are two machine config pools (MCP) created by the cluster when it is installed: `master` and `worker`.  Each MCP manages a set of nodes and applies changes made through a machine config to the appropriate nodes. 
-
-However, you can apply changes to specific sets of worker nodes by using _custom machine config pools_. A custom machine config pool manages its own sets of nodes, which are indicated with a node label. One example of this is a set of infrastructure nodes that host infrastructure components, such as the router or the image registry.   
+You can apply changes to specific sets of worker nodes by using _custom machine config pools_. A custom machine config pool manages its own sets of nodes, which are indicated with a node label. One example of this is a set of infrastructure nodes that host infrastructure components, such as the router or the image registry.   
 
 Custom machine config pools are based on the worker machine config pool. As such, custom pools inherit their initial configuration from the `worker` pool and any change to the `worker` pool is applied to the custom pool. Changes to the custom pool are not inherited by the `worker` pool.
 
@@ -31,8 +27,3 @@ Note the following characteristics about nodes and machine config pools:
 ====
 If a custom node reboots, the node reboots into the `worker` machine config pool. You need to reapply the custom label to that node to place the node back in the custom pool. 
 ====
-
-include::modules/machine-config-pools-custom-configure.adoc[leveloffset=+1]
-include::modules/machine-config-pools-custom-modify.adoc[leveloffset=+1]
-include::modules/machine-config-pools-custom-removing.adoc[leveloffset=+1]
-
