--- a/modules/machine-config-pools-custom-configure.adoc
+++ b/modules/machine-config-pools-custom-configure.adoc
@@ -1,7 +1,6 @@
-
 // Module included in the following assemblies:
 //
-// * machine_configuration/machine-config-pool-custom.adoc
+// * machine_configuration/machine-config-about.adoc
 
 :_content-type: PROCEDURE
 [id="machine-config-pools-custom-configure_{context}"]
@@ -54,7 +53,7 @@ infra    rendered-infra-b5250cb9e8c4a0b9d3e16da185ba4bad    True      False     
 master   rendered-master-b1d4b6196a18869d63518e57b8b335d1   True      False      False      3              3                   3                     0                      156m
 worker   rendered-worker-c48ef626ff01f0a445979a4245dc7bdd   True      False      False      3              3                   3                     0                      156m
 ----
-<1> This is custom machine config pool.
+<1> This is the custom machine config pool.
 +
 Creating a new machine config pool also creates an associated machine configuration, listed under `CONFIG`, here `rendered-infra-b5250cb9e8c4a0b9d3e16da185ba4bad`. Note that there are no nodes associated with the new machine config pool.
 
@@ -125,12 +124,11 @@ ip-10-0-152-59.us-west-1.compute.internal    Ready     worker         37m   v1.3
 <1> The node is added to the `infra` custom machine config pool.
 
 . Optional: To use the node with only the custom role, remove the `worker` role label, for example:
-
++
 [source,terminal]
 ----
 $ oc label node ip-10-0-130-218.us-west-1.compute.internal node-role.kubernetes.io/worker-
 ----
-
 
 . View the new machine config by using the following command:
 +
@@ -200,31 +198,58 @@ spec:
 $ oc create -f disable-chronyd.yaml
 ----
 
-New MC
+. View the new machine config by using the following command:
++
+[source,terminal]
+----
 oc get mc
+----
++
+.Example output
+[source,terminal]
+----
 NAME                                               GENERATEDBYCONTROLLER                      IGNITIONVERSION   AGE
 00-master                                          40d03dc1376995a2d65e10af48287dc8d2b2012e   3.4.0             3h7m
 00-worker                                          40d03dc1376995a2d65e10af48287dc8d2b2012e   3.4.0             3h7m
 # ...
-disable-chronyd                                                                               3.2.0             4s
+disable-chronyd                                                                               3.2.0             4s <1>
 rendered-infra-5a2263cade4e31716d2706b53c21cd7b    40d03dc1376995a2d65e10af48287dc8d2b2012e   3.4.0             31m
+----
+<1> This is the custom machine config.
 
-Infra MCP updating
-
-mburke@mburke ~ $ oc get mcp
+. View the `infra` machine config pool updating by using the following command:
++
+[source,terminal]
+----
+$ oc get mcp
+----
++
+.Example output
+[source,terminal]
+----
 NAME     CONFIG                                             UPDATED   UPDATING   DEGRADED   MACHINECOUNT   READYMACHINECOUNT   UPDATEDMACHINECOUNT   DEGRADEDMACHINECOUNT   AGE
-infra    rendered-infra-5a2263cade4e31716d2706b53c21cd7b    False     True       False      1              0                   0                     0                      31m
+infra    rendered-infra-5a2263cade4e31716d2706b53c21cd7b    False     True       False      1              0                   0                     0                      31m <1>
 master   rendered-master-e06e76bec4076c44f0325ed333db52d0   True      False      False      3              3                   3                     0                      3h8m
 worker   rendered-worker-5a2263cade4e31716d2706b53c21cd7b   True      False      False      2              2                   2                     0                      3h8m
+----
+<1> This is the `infra`	machine config pool.
 
-
-Infra node updating
-
+. View the `infra` node updating by using the following command:
++
+[source,terminal]
+----
  $ oc get nodes
+----
++
+.Example output
+[source,terminal]
+----
 NAME                                       STATUS                        ROLES                  AGE     VERSION
 ci-ln-y798m0t-72292-6vr7l-master-0         Ready                         control-plane,master   3h14m   v1.30.2
 ci-ln-y798m0t-72292-6vr7l-master-1         Ready                         control-plane,master   3h13m   v1.30.2
 ci-ln-y798m0t-72292-6vr7l-master-2         Ready                         control-plane,master   3h13m   v1.30.2
-ci-ln-y798m0t-72292-6vr7l-worker-a-cp5qm   NotReady,SchedulingDisabled   infra                  3h2m    v1.30.2
+ci-ln-y798m0t-72292-6vr7l-worker-a-cp5qm   NotReady,SchedulingDisabled   infra                  3h2m    v1.30.2 <1>
 ci-ln-y798m0t-72292-6vr7l-worker-b-8h5gh   Ready                         worker                 3h2m    v1.30.2
 ci-ln-y798m0t-72292-6vr7l-worker-c-rn7s5   Ready                         worker                 3h2m    v1.30.2
+----
+<1> This is the `infra`	node.
