More 4.17 RNs for OLM

--- a/release_notes/ocp-4-17-release-notes.adoc
+++ b/release_notes/ocp-4-17-release-notes.adoc
@@ -161,6 +161,13 @@ The documentation for {olmv1}, which has been in Technology Preview starting in 
 
 The updated location and guide name reflect a more focused documentation experience and aims to differentiate between {olmv1} and {olmv0}.
 
+[id="ocp-4-17-extensions-crd-upgrade-safety_{context}"]
+==== CRD upgrade safety (Technology Preview)
+
+When you update a custom resource definition (CRD) that is provided by a cluster extension, {olmv1-first} now runs a CRD upgrade safety preflight check to ensure backwards compatibility with previous versions of that CRD. The CRD update must pass the validation checks before the change is allowed to progress on a cluster.
+
+For more information, see xref:../extensions/ce/crd-upgrade-safety.adoc#crd-upgrade-safety[Custom resource definition (CRD) upgrade safety]
+
 [id="ocp-4-17-openshift-cli_{context}"]
 === OpenShift CLI (oc)
 
