OLMv1 OCP 4.17 release notes

--- a/release_notes/ocp-4-17-release-notes.adoc
+++ b/release_notes/ocp-4-17-release-notes.adoc
@@ -177,6 +177,41 @@ The documentation for {olmv1}, which has been in Technology Preview starting in 
 
 The updated location and guide name reflect a more focused documentation experience and aims to differentiate between {olmv1} and {olmv0}.
 
+[id="ocp-4-17-extensions-new-features_{context}"]
+==== {olmv1} Technology Preview features
+
+This Technology Preview phase of {olmv1} introduces the following features:
+
+Custom resource definition (CRD) upgrade safety::
+When you update a CRD that is provided by a cluster extension, {olmv1} now runs a CRD upgrade safety preflight check to ensure backwards compatibility with previous versions of that CRD. The CRD update must pass the validation checks before the change is allowed to progress on a cluster.
++
+For more information, see xref:../extensions/ce/crd-upgrade-safety.adoc#crd-upgrade-safety[Custom resource definition (CRD) upgrade safety].
+
+Single object ownership for cluster extensions::
+In {olmv1}, a Kubernetes object can only be owned by a single `ClusterExtension` object at a time. This ensures that objects within an {product-title} cluster are managed consistently and prevents conflicts between multiple cluster extensions attempting to control the same object.
++
+For more information, see xref:../extensions/arch/operator-controller.adoc#olmv1-object-ownership_operator-controller[Object ownership for cluster extensions].
+
+Enhanced security::
+{olmv1} now requires a dedicated service account for installing, updating, and managing cluster extensions. Additionally, catalogd uses HTTPS encryption to secure catalog server responses.
++
+For more information, see xref:../extensions/ce/managing-ce.adoc#olmv1-creating-a-service-account_managing-ce[Creating a service account to manage cluster extensions].
+
+Improved status conditions::
+In this release, {olmv1} includes improved status conditions and error messaging via the `ClusterExtension` API.
+
+[id="ocp-4-17-extensions-supported-extensions_{context}"]
+==== {olmv1} supported extensions and known issue
+
+include::snippets/olmv1-tp-extension-support.adoc[]
+
+include::snippets/olmv1-operator-conditions-support.adoc[]
+
+[IMPORTANT]
+====
+include::snippets/olmv1-known-issue-private-registries.adoc[]
+====
+
 [id="ocp-4-17-openshift-cli_{context}"]
 === OpenShift CLI (oc)
 
@@ -585,7 +620,7 @@ The host system clock is synchronized from the NIC that is connected to the Glob
 [id="ocp-4-17-sr-iov-network-metrics-exporter_{context}"]
 ==== Enabling the SR-IOV network metrics exporter
 
-With this release, you can query the Single Root I/O Virtualization (SR-IOV) virtual function (VF) metrics by using the {product-title} web console to monitor the networking activity of the SR-IOV pods. When you query the SR-IOV VF metrics by using the web console, the SR-IOV network metrics exporter fetches and returns the VF network statistics along with the name and namespace of the pod that the VF is attached to. 
+With this release, you can query the Single Root I/O Virtualization (SR-IOV) virtual function (VF) metrics by using the {product-title} web console to monitor the networking activity of the SR-IOV pods. When you query the SR-IOV VF metrics by using the web console, the SR-IOV network metrics exporter fetches and returns the VF network statistics along with the name and namespace of the pod that the VF is attached to.
 
 For more information, see xref:../networking/hardware_networks/configuring-sriov-operator.adoc#sriov-operator-metrics_configuring-sriov-operator[Enabling the SR-IOV network metrics exporter]
 
@@ -752,7 +787,7 @@ For more information about cns-migration, see link:https://github.com/openshift/
 === Oracle(R) Cloud Infrastructure
 
 [id="ocp-4-17-olm_{context}"]
-=== Operator lifecycle ({olmv0})
+=== Operator lifecycle
 
 [id="ocp-4-17-olm-extensions-guide_{context}"]
 ==== {olmv1-first} documentation moved to new Extensions guide (Technology Preview)
@@ -760,7 +795,15 @@ For more information about cns-migration, see link:https://github.com/openshift/
 For more information, see the new features and enhancements section for xref:../release_notes/ocp-4-17-release-notes.adoc#ocp-4-17-extensions_release-notes[Extensions].
 
 [id="ocp-4-17-osdk_{context}"]
-=== Operator development ({olmv0})
+=== Operator development
+
+[id="ocp-4-17-osdk-cco-gcp_{context}"]
+==== Token authentication for Operators on cloud providers: {gcp-wid-short}
+
+With this release, Operators managed by Operator Lifecycle Manager (OLM) can support token authentication when running on {gcp-first} clusters configured for {gcp-wid-short}. Updates to the Cloud Credential Operator (CCO) enable semi-automated provisioning of certain short-term credentials, provided that the Operator author has enabled their Operator to support {gcp-wid-short}.
+
+For more information, see xref:../operators/operator_sdk/token_auth/osdk-cco-gcp.adoc#osdk-cco-gcp[CCO-based workflow for OLM-managed Operators with {gcp-wid-short}].
+
 
 [id="ocp-4-17-builds_{context}"]
 === Builds
@@ -925,7 +968,7 @@ For more information, see xref:../edge_computing/ztp-reference-cluster-configura
 [id="ocp-4-17-config-ipsec-encryption_{context}"]
 ==== IPsec encryption for multi-node clusters using {ztp} and SiteConfig resources
 
-You can now enable IPsec encryption in managed multi-node clusters that you deploy with {ztp} and {rh-rhacm-first}. You can encrypt traffic between the managed cluster and IPsec endpoints external to the managed cluster. All network traffic between nodes on the OVN-Kubernetes cluster network is encrypted with IPsec in Transport mode. 
+You can now enable IPsec encryption in managed multi-node clusters that you deploy with {ztp} and {rh-rhacm-first}. You can encrypt traffic between the managed cluster and IPsec endpoints external to the managed cluster. All network traffic between nodes on the OVN-Kubernetes cluster network is encrypted with IPsec in Transport mode.
 
 For more information, see xref:../edge_computing/ztp-deploying-far-edge-sites.adoc#ztp-configuring-ipsec-using-ztp-and-siteconfig-for-mno_ztp-deploying-far-edge-sites[Configuring IPsec encryption for multi-node clusters using {ztp} and SiteConfig resources]
 
